--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,10 @@
 <resources>
 
     <string name="app_name">Dolphindroid</string>
-    <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
+    <string name="about">About</string>
+    <string name="about_content">Copyright (c) 2015, Flavio Zavan.
+        This application is free software,
+        for more information and access to the source code, visit
+        http://github.com/nebososo/dolphindroid</string>
 
 </resources>
