--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,5 +16,20 @@
     <string name="title_activity_controller">ControllerActivity</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="a">A</string>
+    <string name="b">B</string>
+    <string name="minus">-</string>
+    <string name="home">Home</string>
+    <string name="plus">+</string>
+    <string name="one">1</string>
+    <string name="two">2</string>
+    <string name="up">Up</string>
+    <string name="down">Down</string>
+    <string name="left">Left</string>
+    <string name="right">Right</string>
+    <string name="ur">U+R</string>
+    <string name="dr">D+R</string>
+    <string name="dl">D+L</string>
+    <string name="ul">U+L</string>
 
 </resources>
