Disconnection after multiple back key presses

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,5 +31,6 @@
     <string name="dr">D+R</string>
     <string name="dl">D+L</string>
     <string name="ul">U+L</string>
+    <string name="presses_to_go">" more back button presses to disconnect"</string>
 
 </resources>
