--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
 
     <string name="app_name">Dolphindroid</string>
     <string name="about">About</string>
-    <string name="about_content">Copyright (c) 2015, Flavio Zavan.
+    <string name="about_content">Copyright © 2015, Flavio Zavan.
         This application is free software,
         for more information and access to the source code, visit
         http://github.com/nebososo/dolphindroid</string>
@@ -14,8 +14,6 @@
     <string name="cancel">Cancel</string>
     <string name="custom">Custom</string>
     <string name="title_activity_controller">ControllerActivity</string>
-    <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
     <string name="a">A</string>
     <string name="b">B</string>
     <string name="minus">-</string>
